# repokg

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/repo_atlas/: __init__.py  cli.py  code.py  deps.py  github.py  gitinfo.py  inject.py  markdown.py  ops.py  prompts.py
src/repokg/: __init__.py  cli.py  code.py  deps.py  findings.py  gitinfo.py  inject.py  markdown.py  prompts.py  validate.py
tests/: test_classify.py  test_clean.py  test_deps_js.py  test_deps_jvm.py  test_deps_rust.py  test_exclude.py  test_inject.py  test_render.py  test_validate.py
