[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repokg"
version = "0.5.0"
description = "Generate an AI-ready knowledge graph (KNOWLEDGE_GRAPH.md + kg.json) of any codebase: modules, dependency edges, branches, PRs, ops surface."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nihar Shah" }]
requires-python = ">=3.9"
keywords = ["knowledge-graph", "codebase", "ai", "agents", "documentation", "repo-map"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/NehharShah/repokg"

[project.scripts]
repokg = "repokg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
